# wizex

./: .gitignore  Cargo.toml  README.md
crates/wizex_api/: Cargo.toml  build.rs
crates/wizex_api/src/: call_main.c  lib.rs
crates/wizex_macros/: Cargo.toml  build.rs
crates/wizex_macros/src/: call_main.c  lib.rs
examples/cpp/: Makefile  main.cpp
examples/rust/: Cargo.toml  Makefile
examples/rust/src/: main.rs
include/: wizex.h
src/: dummy.rs  info.rs  instrument.rs  lib.rs  parse.rs  rewrite.rs  snapshot.rs  translate.rs
src/info/: types_interner.rs
