[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["command-line-utilities", "development-tools", "wasm"]
description = "WASIX fork of wizer"
edition = "2018"
exclude = ["**.wasm"]
homepage = "https://github.com/bytecodealliance/wizer"
license = "Apache-2.0 WITH LLVM-exception"
name = "wizex"
readme = "./README.md"
repository = "https://github.com/bytecodealliance/wizer"
version = "6.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wizex"
required-features = ["tracing", "tracing-subscriber", "structopt"]

[[bench]]
name = "regex"
harness = false

[[bench]]
name = "uap"
harness = false

[dependencies]
anyhow = "1.0.81"
cap-std = "3.0.0"
log = "0.4.21"
mio = { version = "0.8", features = ["net"] }
rayon = "1.10.0"
structopt = { version = "0.3.26", optional = true }
tokio = { version = "1.39.2" }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"]}
virtual-net = { workspace = true }
wasm-encoder = "0.202.0"
wasmparser = "0.202.0"
wasmer = { workspace = true }
wasmer-wasix = { workspace = true }
webc = "6.0.0-rc2"

# Enable this dependency to get messages with WAT disassemblies when certain
# internal panics occur.
[dependencies.wasmprinter]
workspace = true
optional = true

[workspace.dependencies]
wasmprinter = "0.202.0"
# wasmer = "4.3.7"
# wasmer-wasix = "0.27"

virtual-net = { path = "../wasmer/lib/virtual-net" }
wasmer = { path = "../wasmer/lib/api" }
wasmer-wasix = { path = "../wasmer/lib/wasix" }


[dev-dependencies]
criterion = "0.5.1"
env_logger = "0.11.3"
wasmprinter = { workspace = true }
wat = "=1.0.71"

[workspace]
members = [
    "benches/regex-bench",
    "benches/uap-bench",
    "crates/wizex_macros",
    "examples/rust",
    # "fuzz",
    "tests/regex-test",
]

[profile.bench]
debug = true

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(fuzzing)'] }
